--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,18 +4,22 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+  - title: "CV"
+    url: /cv/
+
+  - title: "News"
+    url: /news/   
+  
+  #- title: "Talks"
+    #url: /talks/    
 
   - title: "Teaching"
-    url: /teaching/    
-    
- 
-        
+    url: /teaching/   
+
+
   - title: "Blog Posts"
     url: /year-archive/
     
-  - title: "CV"
-    url: /cv/
+  
     
   
