--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ author:
   # Biographic information
   avatar           : "profile.png"
   name             : "Yixi ZHOU"
-  pronouns         : # example: "she/her"  
+  pronouns         : "he/him"  
   bio              : "Junior at Shanghaitech university"
   location         : "Shanghai, China"
   employer         : "Shanghaitech university"
